--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=abysss
-SITE_BASE_URL=
+SITE_BASE_URL=https://kratospidey.netlify.app
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
