--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/HEAD/theme.css
 BASE_THEME=dark
-SITE_NAME_HEADER=abysss
+SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=https://kratospidey.netlify.app
 dgHomeLink=true
 dgPassFrontmatter=false
